Name:          crux-llvm
Version:       0.4
Author:        Galois Inc.
Maintainer:    iavor.diatchki@gmail.com
Copyright:     (c) Galois, Inc 2014-2021
License:       BSD3
License-file:  LICENSE
Build-type:    Simple
Cabal-version: >= 1.10
Category:      Language
Synopsis:      A verification tool for C programs.
Description:
  .
  This tool (and corresponding C library) are intended for verifying C
  programs using verification specifications embedded in the input
  source files (i.e. it allows for writing Crucible specifications
  by using C as the specification language).
  .
  This tool provides:
  .
  * a Haskell library with the core functionality,
  .
  * a crux-llvm executable used to run the verification when given one
    or more C or C++ source files
  .
  * a set of supplemental C source files, include files, and LLVM
    runtime library bitcode files to use for building the input C
    files into verifiable LLVM BC files.
  .
  * a crux-llvm-svcomp that is designed to run verification on the set
    of challenge inputs for the SV-COMP competition and generate
    benchmark results.

library

  hs-source-dirs: src

  exposed-modules:
    CruxLLVMMain
    Crux.LLVM.Compile
    Crux.LLVM.Config
    Crux.LLVM.Overrides
    Crux.LLVM.Simulate

  build-depends:
    ansi-terminal,
    bytestring,
    base >= 4.8 && < 4.15,
    bv-sized,
    config-schema,
    containers,
    crucible,
    crucible-llvm,
    crux,
    data-binary-ieee754,
    directory,
    filepath,
    lens,
    llvm-pretty,
    llvm-pretty-bc-parser,
    mtl,
    parameterized-utils,
    prettyprinter >= 1.7.0,
    process,
    template-haskell,
    text,
    what4
  ghc-options: -Wall -Wcompat -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns
  ghc-prof-options: -O2

  default-language: Haskell2010



executable crux-llvm

  hs-source-dirs: exe

  build-depends:
    ansi-terminal,
    base >= 4.8 && < 4.15,
    bytestring,
    containers,
    crucible,
    crucible-llvm,
    crux,
    crux-llvm,
    data-binary-ieee754,
    directory,
    filepath,
    lens,
    llvm-pretty,
    llvm-pretty-bc-parser,
    mtl,
    parameterized-utils,
    process,
    template-haskell,
    text,
    what4

  main-is: Main.hs

  if os(windows)
    hs-source-dirs: exe/windows
  else
    hs-source-dirs: exe/unix
    build-depends: unix

  other-modules: RealMain

  ghc-options: -Wall -Wcompat -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns
  ghc-prof-options: -O2

  default-language: Haskell2010


executable crux-llvm-svcomp
  hs-source-dirs: svcomp
  main-is: Main.hs

  if os(windows)
    buildable: False

  build-depends:
    aeson >= 1.4.7,
    attoparsec >= 0.13,
    async >= 2.2,
    ansi-terminal,
    base >= 4.8 && < 4.15,
    bytestring,
    containers,
    crucible,
    crucible-llvm,
    crux,
    crux-llvm,
    data-binary-ieee754,
    directory,
    filepath,
    lens,
    llvm-pretty,
    llvm-pretty-bc-parser,
    mtl,
    parameterized-utils,
    process,
    template-haskell,
    time,
    text,
    unix,
    what4

  ghc-options: -Wall -Wcompat
  ghc-prof-options: -O2

  default-language: Haskell2010


test-suite crux-llvm-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  ghc-options: -Wall -Wcompat -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns
  ghc-prof-options: -O2

  main-is: Test.hs

  build-depends:
                base             >= 4.7,
                bytestring,
                containers,
                crucible,
                crux,
                crux-llvm,
                deepseq,
                directory,
                filepath,
                parsec,
                process,
                saw-core,
                QuickCheck,
                tasty            >= 0.10,
                tasty-hunit      >= 0.10,
                tasty-sugar      > 1.0.1.0,
                text,
                what4

  default-language: Haskell2010
