name:                crux-mir
version:             0.7
-- synopsis:
-- description:
homepage:            https://github.com/GaloisInc/crucible/blob/master/crux-mir/README.md
license:             BSD3
license-file:        LICENSE
author:              Joshua Gancher,
                     Rob Dockins,
                     Andrey Chudnov,
                     Stephanie Weirich,
                     Stuart Pernsteiner
maintainer:          spernsteiner@galois.com
copyright:           2017-2020 Galois, Inc.
category:            Web
build-type:          Simple
cabal-version:       2.0
extra-source-files:  README.md

library
  default-language: Haskell2010
  build-depends: base >= 4.11 && < 5,
                 aeson < 2.2,
                 ansi-terminal,
                 bv-sized,
                 bytestring,
                 prettyprinter >= 1.7.0,
                 text,
                 time,
                 crucible,
                 crucible-concurrency,
                 crucible-mir,
                 parameterized-utils >= 1.0.8,
                 containers,
                 lens,
                 vector,
                 mtl,
                 transformers,
                 filepath,
                 directory,
                 what4,
                 process,
                 crux,
                 simple-get-opt < 0.5


  hs-source-dirs: src
  exposed-modules: Mir.Generate
                   Mir.Language
                   Mir.Log
                   Mir.Concurrency
                   Mir.Overrides
  other-modules: Paths_crux_mir
  autogen-modules: Paths_crux_mir


executable crux-mir
  hs-source-dirs: exe
  main-is: Main.hs

  build-depends:
                base >= 4.7 && < 5,
                crux-mir

  ghc-options: -Wall
  ghc-prof-options: -O2 -fprof-auto-top
  default-language: Haskell2010


test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  ghc-options: -Wall
  ghc-prof-options: -fprof-auto -O2

  main-is: Test.hs

  build-depends:
                base             >= 4.7,
                directory,
                filepath,
                process,
                crux-mir,
                tasty            >= 0.10,
                tasty-hunit      >= 0.10,
                tasty-golden     >= 2.3,
                tasty-expected-failure >= 0.11,
                temporary        >= 1.3,
                crux,
                config-schema,
                config-value,
                bytestring,
                utf8-string

  default-language: Haskell2010
