cabal-version:       2.2
name:                crux-mir
version:             0.12
-- synopsis:
-- description:
homepage:            https://github.com/GaloisInc/crucible/blob/master/crux-mir/README.md
license:             BSD-3-Clause
license-file:        LICENSE
author:              Joshua Gancher,
                     Rob Dockins,
                     Andrey Chudnov,
                     Stephanie Weirich,
                     Stuart Pernsteiner
maintainer:          spernsteiner@galois.com
copyright:           2017-2020 Galois, Inc.
category:            Web
build-type:          Simple
extra-doc-files:  CHANGELOG.md, README.md

common shared
  -- Specifying -Wall and -Werror can cause the project to fail to build on
  -- newer versions of GHC simply due to new warnings being added to -Wall. To
  -- prevent this from happening we manually list which warnings should be
  -- considered errors. We also list some warnings that are not in -Wall, though
  -- try to avoid "opinionated" warnings (though this judgement is clearly
  -- subjective).
  --
  -- Warnings are grouped by the GHC version that introduced them, and then
  -- alphabetically.
  --
  -- A list of warnings and the GHC version in which they were introduced is
  -- available here:
  -- https://ghc.gitlab.haskell.org/ghc/doc/users_guide/using-warnings.html

  -- Since GHC 9.6 or earlier:
  ghc-options:
    -Wall
    -Werror=ambiguous-fields
    -Werror=compat-unqualified-imports
    -Werror=deferred-type-errors
    -Werror=deprecated-flags
    -Werror=deprecations
    -Werror=deriving-defaults
    -Werror=deriving-typeable
    -Werror=dodgy-foreign-imports
    -Werror=duplicate-exports
    -Werror=empty-enumerations
    -Werror=gadt-mono-local-binds
    -Werror=identities
    -Werror=inaccessible-code
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=inline-rule-shadowing
    -Werror=misplaced-pragmas
    -Werror=missed-extra-shared-lib
    -Werror=missing-exported-signatures
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods
    -Werror=missing-pattern-synonym-signatures
    -Werror=missing-signatures
    -Werror=name-shadowing
    -Werror=noncanonical-monad-instances
    -Werror=noncanonical-monoid-instances
    -Werror=operator-whitespace
    -Werror=operator-whitespace-ext-conflict
    -Werror=orphans
    -Werror=overflowed-literals
    -Werror=overlapping-patterns
    -Werror=partial-fields
    -Werror=partial-type-signatures
    -Werror=redundant-bang-patterns
    -Werror=redundant-record-wildcards
    -Werror=redundant-strictness-flags
    -Werror=simplifiable-class-constraints
    -Werror=star-binder
    -Werror=star-is-type
    -Werror=tabs
    -Werror=type-defaults
    -Werror=typed-holes
    -Werror=type-equality-out-of-scope
    -Werror=type-equality-requires-operators
    -Werror=unicode-bidirectional-format-characters
    -Werror=unrecognised-pragmas
    -Werror=unrecognised-warning-flags
    -Werror=unsupported-calling-conventions
    -Werror=unsupported-llvm-version
    -Werror=unused-do-bind
    -Werror=unused-imports
    -Werror=unused-record-wildcards
    -Werror=warnings-deprecations
    -Werror=wrong-do-bind

  if impl(ghc < 9.8)
    ghc-options:
      -Werror=forall-identifier

  if impl(ghc >= 9.8)
    ghc-options:
      -Werror=incomplete-export-warnings
      -Werror=inconsistent-flags

  if impl(ghc >= 9.10)
    ghc-options:
      -Werror=badly-staged-types
      -Werror=data-kinds-tc
      -Werror=deprecated-type-abstractions
      -Werror=incomplete-record-selectors

  ghc-prof-options: -O2 -fprof-auto-top
  default-language: Haskell2010

library
  import: shared

  build-depends: base >= 4.11 && < 5,
                 aeson < 2.3,
                 ansi-terminal,
                 bv-sized,
                 bytestring,
                 extra,
                 prettyprinter >= 1.7.0,
                 text,
                 time,
                 crucible,
                 crucible-concurrency,
                 crucible-debug,
                 crucible-mir,
                 parameterized-utils >= 1.0.8,
                 containers,
                 lens,
                 mtl,
                 transformers,
                 filepath,
                 directory,
                 what4,
                 process,
                 crux,
                 simple-get-opt < 0.5


  hs-source-dirs: src
  exposed-modules: Mir.Generate
                   Mir.Language
                   Mir.Log
                   Mir.Concurrency
                   Mir.Overrides
                   Mir.Defaults
                   Mir.Options
  other-modules: Paths_crux_mir
  autogen-modules: Paths_crux_mir

executable crux-mir
  import: shared

  hs-source-dirs: exe
  main-is: Main.hs

  build-depends:
                base >= 4.7 && < 5,
                crux-mir

test-suite crux-mir-test
  import: shared

  type: exitcode-stdio-1.0
  hs-source-dirs: test

  main-is: Test.hs

  build-depends:
                base             >= 4.7,
                directory,
                filepath,
                process,
                crux-mir,
                tasty            >= 0.10,
                tasty-hunit      >= 0.10,
                tasty-golden     >= 2.3,
                tasty-expected-failure >= 0.11,
                temporary        >= 1.3,
                crux,
                config-schema,
                config-value,
                bytestring,
                regex-base,
                regex-posix,
                utf8-string
