name:                mir-verifier
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GaloisInc/mir-verifier#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Gancher
maintainer:          jrg358@cornell.edu
copyright:           2017 Galois, Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     
library
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5,
                       aeson,
                       ansi-wl-pprint,
                       bytestring,
                       text,
                       unordered-containers,
                       crucible,
                       parameterized-utils,
                       containers,
                       lens,
                       vector,
                       mtl,
                       regex-compat,
                       regex-base,
                       crucible-saw,
                       transformers,
                       saw-core,
                 filepath,
                 directory,
                 what4,
                 process,
                 tasty            >= 0.10,
                 tasty-hunit      >= 0.10,
                 tasty-quickcheck >= 0.8,
                 parsec,
                 aig


  hs-source-dirs: src
  exposed-modules: Mir.SAWInterface,
                   Mir.Mir
                   Mir.Pass,
                   Mir.Pass.CollapseRefs,
                   Mir.Pass.MutRefReturnStatic,
                   Mir.Pass.RewriteMutRef,
                   Mir.Pass.RemoveStorage,
                   Mir.Pass.RemoveBoxNullary

  other-modules: 
                 Mir.Intrinsics,
                 Mir.Run,
                 Mir.Trans

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  ghc-options: -Wall
  ghc-prof-options: -fprof-auto -O2

  main-is: Test.hs

  build-depends:
                base             >= 4.7,
                containers,
                deepseq,
                directory,
                filepath,
                parsec,
                process,
                mir-verifier,
                saw-core,
                QuickCheck,
                tasty            >= 0.10,
                tasty-hunit      >= 0.10,
                tasty-quickcheck >= 0.8,
                aig

  default-language: Haskell2010
