name:                mir-verifier
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GaloisInc/mir-verifier#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Gancher
maintainer:          jrg358@cornell.edu
copyright:           2017 Galois, Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     
library
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5,
                 aeson,
                 ansi-terminal,
                 ansi-wl-pprint,
                 bytestring,
                 text,
                 time,
                 unordered-containers,
                 crucible,
                 parameterized-utils >= 1.0.8,
                 containers,
                 lens,
                 vector,
                 mtl,
                 regex-compat,
                 regex-base,
                 transformers,
                 filepath,
                 directory,
                 what4,
                 process,
                 tasty            >= 0.10,
                 tasty-hunit      >= 0.10,
                 tasty-quickcheck >= 0.8,
                 tasty-golden     >= 2.3,
                 parsec,
                 aig,
                 crux,
                 scientific       >= 0.3,
                 simple-get-opt,
                 config-schema,
                 template-haskell


  hs-source-dirs: src
  exposed-modules: Mir.JSON
                   Mir.Generator
                   Mir.Language
                   Mir.Mir
                   Mir.GenericOps
                   Mir.Pass
                   Mir.Pass.AllocateEnum
                   Mir.PP
                   Mir.Generate
                   Mir.DefId
  other-modules: 
                 Mir.FancyMuxTree
                 Mir.Intrinsics
                 Mir.Overrides
                 Mir.TransTy
                 Mir.Trans
                 Mir.TransCustom


executable crux-mir
  hs-source-dirs: exe
  main-is: Main.hs

  build-depends:
                base >= 4.7 && < 5,
                mir-verifier,
                aeson,
                ansi-wl-pprint,
                bytestring,
                text,
                unordered-containers,
                crucible,
                parameterized-utils,
                containers,
                lens,
                vector,
                mtl,
                regex-compat,
                regex-base,
                transformers,
                filepath,
                directory,
                what4,
                process,
                tasty            >= 0.10,
                tasty-hunit      >= 0.10,
                tasty-quickcheck >= 0.8,
                tasty-golden     >= 2.3,
                parsec,
                aig,
                crux
                
  ghc-options: -Wall
  ghc-prof-options: -O2 -fprof-auto-top
  default-language: Haskell2010

                 
test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  ghc-options: -Wall
  ghc-prof-options: -fprof-auto -O2

  main-is: Test.hs

  build-depends:
                base             >= 4.7,
                containers,
                deepseq,
                directory,
                filepath,
                parsec,
                process,
                mir-verifier,
                QuickCheck,
                tasty            >= 0.10,
                tasty-hunit      >= 0.10,
                tasty-quickcheck >= 0.8,
                tasty-golden     >= 2.3,
                tasty-expected-failure >= 0.11,
                temporary        >= 1.3,
                aig,
                crux,
                crucible,
                config-schema,
                config-value,
                bytestring,
                utf8-string
                
  default-language: Haskell2010
