Name:          crux
Version:       0.1
Author:        Galois Inc.
Copyright:     (c) Galois, Inc. 2018
Maintainer:    sweirich@galois.com
License:       BSD3
License-file:  LICENSE
Build-type:    Simple
Cabal-version: >= 1.10
Category:      Language
Synopsis:      Simple top-level for Crucible Simulation

library 
        
  build-depends:
    base >= 4 && < 5,
    aig,
    ansi-wl-pprint,
    array,
    attoparsec,
    bv-sized >= 1.0.0,
    containers,
    crucible,
    directory,
    filepath,
    haskeline >= 0.7,
    lens,
    mtl >= 2.1,
    parameterized-utils >= 1.0 && < 2.2,
    pretty >= 1.1,
    split >= 0.2,
    text,
    time >= 1.8 && < 2.0,
    transformers >= 0.3,
    transformers-compat,
    vector >= 0.7,
    what4 >= 0.4.1,
    ansi-terminal,
    data-binary-ieee754,
    Glob >= 0.10 && < 0.11,
    raw-strings-qq,
    simple-get-opt,
    config-value,
    config-schema,
    semigroupoids,
    unordered-containers,
    yaml >= 0.11 && < 0.12

  hs-source-dirs: src

  exposed-modules:
    Crux,
    Crux.Types,
    Crux.Goal,
    Crux.Log,
    Crux.ProgressBar,
    Crux.Report,
    Crux.Model,
    Crux.Loops,
    Crux.Config,
    Crux.Config.Load,
    Crux.Config.Doc,
    Crux.Config.Common,
    Crux.Config.Solver,
    Crux.SVCOMP,
    Crux.Version

  other-modules:
   Crux.UI.JS,
   Crux.UI.Jquery,
   Crux.UI.IndexHtml

  ghc-options: -Wall -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns
  ghc-prof-options: -O2 -fprof-auto-top
  default-language: Haskell2010

