Cabal-version: 3.0
Name:          crux
Version:       0.4
Copyright:     (c) Galois, Inc. 2018-2021
Author:        sweirich@galois.com
Maintainer:    rdockins@galois.com
License:       BSD-3-Clause
License-file:  LICENSE
Build-type:    Simple
Category:      Language
Synopsis:      Simple top-level library for Crucible Simulation
Description:
  The Crux library provides the common elements for running a Crucible
  simulation on specific source files, with various options.  This
  library is used by specific instances of Crux tools that provide a
  command-line interface to Crucible-based simulation and
  verification, usually by embedding verification specifications in
  the source language.

library 
        
  build-depends:
    base >= 4 && < 5,
    aig,
    array,
    async,
    attoparsec,
    bv-sized >= 1.0.0,
    containers,
    crucible,
    directory,
    filepath,
    haskeline >= 0.7,
    lens,
    libBF >= 0.6 && < 0.7,
    mtl >= 2.1,
    parameterized-utils >= 1.0 && < 2.2,
    prettyprinter >= 1.7.0,
    split >= 0.2,
    terminal-size,
    text,
    time >= 1.8 && < 2.0,
    transformers >= 0.3,
    transformers-compat,
    vector >= 0.7,
    what4 >= 0.4.1,
    ansi-terminal,
    Glob >= 0.10 && < 0.11,
    raw-strings-qq,
    simple-get-opt,
    config-value,
    config-schema,
    semigroupoids,
    unordered-containers,
    yaml >= 0.11 && < 0.12

  hs-source-dirs: src

  exposed-modules:
    Crux,
    Crux.Types,
    Crux.Goal,
    Crux.Log,
    Crux.ProgressBar,
    Crux.Report,
    Crux.Model,
    Crux.Loops,
    Crux.Config,
    Crux.Config.Load,
    Crux.Config.Doc,
    Crux.Config.Common,
    Crux.Config.Solver,
    Crux.SVCOMP,
    Crux.UI.JS,
    Crux.Version

  other-modules:
   Crux.UI.Jquery,
   Crux.UI.IndexHtml

  ghc-options: -Wall -Wcompat -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns
  ghc-prof-options: -O2
  default-language: Haskell2010

