Cabal-version: 2.2
Name:          crux
Version:       0.7.1
Copyright:     (c) Galois, Inc. 2018-2022
Author:        sweirich@galois.com
Maintainer:    rscott@galois.com, kquick@galois.com, langston@galois.com
License:       BSD-3-Clause
License-file:  LICENSE
Build-type:    Simple
Category:      Language
Synopsis:      Simple top-level library for Crucible Simulation
Description:
  The Crux library provides the common elements for running a Crucible
  simulation on specific source files, with various options.  This
  library is used by specific instances of Crux tools that provide a
  command-line interface to Crucible-based simulation and
  verification, usually by embedding verification specifications in
  the source language.

source-repository head
  type:     git
  location: https://github.com/GaloisInc/crucible
  subdir:   crux

library

  build-depends:
    base >= 4 && < 5,
    aeson < 2.3,
    async,
    attoparsec,
    bv-sized >= 1.0.0,
    bytestring,
    containers,
    contravariant >= 1.5 && < 1.6,
    crucible,
    directory,
    filepath,
    generic-lens,
    lens,
    libBF >= 0.6 && < 0.7,
    lumberjack >= 1.0 && < 1.1,
    parameterized-utils >= 1.0 && < 2.2,
    prettyprinter >= 1.7.0,
    split >= 0.2,
    terminal-size,
    text,
    time >= 1.9 && < 2.0,
    vector >= 0.7,
    what4 >= 0.4.1,
    ansi-terminal,
    Glob >= 0.10 && < 0.11,
    raw-strings-qq,
    simple-get-opt < 0.5,
    config-value,
    config-schema >= 1.2.2.0,
    semigroupoids,
    xml,
    yaml >= 0.11 && < 0.12

  hs-source-dirs: src

  exposed-modules:
    Crux,
    Crux.Types,
    Crux.FormatOut,
    Crux.Goal,
    Crux.Log,
    Crux.ProgressBar,
    Crux.Report,
    Crux.Model,
    Crux.Loops,
    Crux.Config,
    Crux.Config.Load,
    Crux.Config.Doc,
    Crux.Config.Common,
    Crux.Config.Solver,
    Crux.Overrides,
    Crux.SVCOMP,
    Crux.SVCOMP.Witness,
    Crux.UI.JS,
    Crux.Version

  other-modules:
   Crux.UI.Jquery,
   Crux.UI.IndexHtml
   Paths_crux

  autogen-modules:
   Paths_crux

  ghc-options: -Wall
               -Wcompat
               -Werror=incomplete-patterns
               -Werror=missing-methods
               -Werror=overlapping-patterns
               -Wpartial-fields
               -Wincomplete-uni-patterns
  ghc-prof-options: -O2
  default-language: Haskell2010
